--- a/src/keyframes.css
+++ b/src/keyframes.css
@@ -1,3 +1,14 @@
+
+.typing{
+    display: block;
+    font-family: monospace;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 10ch;
+    animation: typing 10s steps(10), blink .5s infinite step-end alternate;
+    overflow: hidden;
+}
+
 @keyframes typing {
     from {
         width: 0;
