--- a/src/keyframes.css
+++ b/src/keyframes.css
@@ -9,3 +9,17 @@
         border-color: transparent;
     }
 }
+
+/*beat*/
+
+@keyframes beat {
+    0% {
+        transform: scale(1);
+    }
+    20% {
+        transform: scale(1.15);
+    }
+    40% {
+        transform: scale(1.4);
+    }
+}
